preventd horizontal scroll

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,30 @@
+html, body {
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 #back {
     background-image: url(../images/dark-grey-terrazzo.png);
+
+}
+
+#tealstripe {
+    height: 5px;
+    background-color: #4aaaa5;
+    position: fixed;
+    bottom: 10px;
+}
+
+footer {
+    background-color: #666666;
+    color: #777777;
+    clear: both;
+    overflow: auto;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    padding: 15px;
+    text-align: center;
 }
 
 nav {
@@ -24,8 +49,18 @@ nav {
     background-color: #ffffff;
     padding: 10px;
     border-left: solid;
-    width: auto;
+    width: 100%;
     font-family: Arial, Helvetica, sans-serif;
+    color: #777777;
+}
+
+#aboutsection2 {
+        color: #777777;
+        background-color: #ffffff;
+        padding: 10px;
+        width: 100%;
+        font-family: Arial, Helvetica, sans-serif;
+        margin-left: 0px;
 }
 
 #name {
@@ -36,11 +71,12 @@ nav {
     font-family: Georgia, 'Times New Roman', Times, serif;
     padding-bottom: 14px;
     padding-top:18px;
-    padding-right: 12px;
-    padding-left: 22px;
+    padding-right: 10px;
+    padding-left: 24px;
 }
 
 #about {
+    color: #777777;
     font-family: Arial, Helvetica, sans-serif;
     border-left-style: none;
     float: left;
@@ -53,6 +89,7 @@ nav {
 }
 
 #contact {
+    color: #777777;
     font-family: Arial, Helvetica, sans-serif;
     border-left-style: none;
     float: left;
@@ -65,6 +102,7 @@ nav {
 }
 
 #portfolio {
+    color: #777777;
     font-family: Arial, Helvetica, sans-serif;
     padding-left: 0px;
     border-left-style: none;
@@ -85,8 +123,8 @@ nav {
     float: left;
     border-style: outset;
     border-top-style: none;
-    border-color: #dddddd;
-    
+    border-color: #dddddd; 
+    width: 100%;
 }
 
 #aboutmetitle {
@@ -97,6 +135,7 @@ nav {
     overflow: auto;
     border-color:#dddddd;
     background-color: #ffffff;
+    width: 100%;
 }
 
 
@@ -107,6 +146,8 @@ nav {
 
 h2 {
     font-family: Georgia, 'Times New Roman', Times, serif;
+    color: #4aaaa5;
+    width: 100%;
 }
 
 /*      contact page CSS      */
